src/main/jkube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: birthday-api
    group: com.marceldias
  name: birthday-api

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: birthday-api
            port:
              number: 80
        path: /hello
        pathType: Prefix
